# idCryptRust

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: id_crypt.rs
