[package]
name = "id_crypt"
version = "1.0.0"
authors = ["PowerBall253 <brunoanconasala@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "idCrypt"
path = "src/id_crypt.rs"

[dependencies]
getrandom = "*"
sha2 = "*"
hmac = "*"
aes = "*"
block-modes = "*"
