[package]
name = "id_crypt"
version = "2.0.0"
authors = ["Bruno Ancona <brunoanconasala@gmail.com>"]
edition = "2021"

[[bin]]
name = "idCrypt"
path = "src/id_crypt.rs"

[dependencies]
getrandom = "0.2.15"
sha2 = "0.10.8"
hmac = "0.12.1"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
